--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -99,6 +99,17 @@
           </execution>
         </executions>
       </plugin>
+      <!-- trick to exclude this module from deployment bundle -->
+      <plugin>
+        <groupId>org.sonatype.central</groupId>
+        <artifactId>central-publishing-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>injected-central-publishing</id>
+            <phase>none</phase>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
