--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.hyperfoil.tools</groupId>
-    <artifactId>hyperfoil-yaup</artifactId>
+    <artifactId>yaup-parent</artifactId>
     <packaging>pom</packaging>
     <version>0.9.9-SNAPSHOT</version>
     <modules>
         <module>yaup-core</module>
         <module>yaup</module>
     </modules>
-    <name>hyperfoil-yaup-parent</name>
+    <name>yaup-parent</name>
     <description>Yet Another Utility Project</description>
     <url>https://github.com/Hyperfoil/yaup</url>
     <scm>
