--- a/yaup/pom.xml
+++ b/yaup/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>io.hyperfoil.tools</groupId>
     <artifactId>yaup-parent</artifactId>
-    <version>0.9.10</version>
+    <version>0.9.11-SNAPSHOT</version>
   </parent>
   <name>yaup</name>
   <artifactId>yaup</artifactId>
